Use more EitherOrMultiPattern when expected